examples/type_system/failing/01_compile_type_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/01_compile_type_mismatch.flx
// error[E300]: Argument Type Mismatch
//
// I found the wrong type in the 1st argument to `add`.
//
//   examples/type_system/failing/01_compile_type_mismatch.flx:38:5
//    |
// 33 | fn add(a: Int, b: Int) -> Int {
//    | ----------------------------- `add` expects `Int` as the 1st parameter
// 34 |     a + b
// 35 | }
// 36 |
// 37 |
// 38 | add("x", 2)
//    |     ^^^
//    |     --- this argument has type `String`
//
// Note:
//   expected argument type: Int
//   found argument type: String
//   the actual argument type is inferred from this expression
//   the expected argument type comes from the function signature
//
// Help:
//   Pass a `Int` value as the 1st argument.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

fn add(a: Int, b: Int) -> Int {
    a + b
}

// Compile-time mismatch: argument #1 is String, expected Int.
add("x", 2)
